# Healthy_Habits_Tracker

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/fixtures/: habits_data.json
habits/migrations/: 0001_initial.py  0002_alter_habit_owner.py  0003_habit_send_indicator.py  0004_alter_habit_periodicity.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/fixtures/: users_data.json
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py
